[package]
name = "async-opcua-simple-client"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
log = { workspace = true }
pico-args = "0.5"
tokio = { version = "1.43.1", features = ["full"] }
env_logger = { workspace = true }

[dependencies.async-opcua]
path = "../../async-opcua"
features = ["client"]
default-features = false
